tests/badunits.out
./badunits.svx:3:15: error: Unknown units "FURLONGS"
./badunits.svx:4:29: error: Unknown units "Radians"
./badunits.svx:5:16: error: Invalid units "METRES" for quantity
./badunits.svx:6:19: error: Invalid units "Degrees" for quantity
./badunits.svx:7:23: error: Invalid units "Metres" for quantity
./badunits.svx:8:8: error: Unknown quantity "Anemometer"
./badunits.svx:10:16: error: End of line not blank
./badunits.svx:11:16: error: End of line not blank
./badunits.svx:12:13: error: Unknown units "DEFault"
./badunits.svx:13:13: error: Unknown units "DEFault"
./badunits.svx:14:16: error: End of line not blank
./badunits.svx:15:16: error: End of line not blank

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00ft (   0.00ft adjusted)
Total plan length of survey legs =    0.00ft
Total vertical length of survey legs =    0.00ft
   1 0-node.
There were 0 warning(s) and 12 error(s) - no output files produced.
